# fossil

./: CMakeLists.txt  LICENSE  README.md  fossil.f90
fossil_c/: fossil.go
test/: CMakeLists.txt  fossil_test.f90
